# starship-of-chameleons

./: .gitignore  ARCHITECTURE_TRANSLATION.md  CAPTAIN_CHANNEL_OPTIONS.md  FEATURES_NEXT.md  GITHUB_LAUNCH_COPY.md  PROJECT_BRIEF.md  PROTOCOL_DIRECTION.md  PROVIDER_HELP.md  README.md  RUN_STARSHIP.md  STARSHIP_BLACKBOARD.md  enter_starship.sh  install_engage_alias.sh  install_starship_alias.sh  pyproject.toml  run_starship.py  starship
Versions/: README.md
Versions/v0.1.0-captain-chat-ui/: RUN.md  launch_starship_cli.py  launch_starship_ui.py
docs/: Chameleon_Starship_Protocol_v2.0.0_WHITEPAPER.md  codex_oauth_setup_research.md  onboarding_commit_prep_2026-04-24.sh  onboarding_milestone_summary_2026-04-24.md  quickstart_onboarding.md  readiness_slice_commit_note_2026-04-25.md  snake-game-design-document.md  snake-game-implementation-notes.md  snake-game-requirements.md  starship_software_design_document.md
examples/: captain_chat.py  captain_handshake.py  delegation_demo.py  game_studio_make_snake_demo.py  launch_starship.py  launch_starship_ui.py  mission_engine_v0_demo.py  onboarding_game_studio_demo.py  real_brains_demo.py  snake_game.py  starship_first_run.py  test_persistent_xwing.sh  xwing_demo.py
scripts/archive/: README.md  run_starship_no_browser.py
src/starship_protocol/: CAPTAIN_IDENTITY.md  activity_log.py  brain_selection.py  brains.py  captain_chat.py  captain_console.py  comms.py  (+22 more)
tests/: test_internal_comms.py  test_mission_collaboration.py  test_onboarding_flow.py  test_registry_and_viewmodel.py  test_runtime_console.py  test_runtime_planner.py
(+28 files in other folders)
