[project]
name = "starship-of-chameleons-protocol"
version = "0.1.0"
description = "Companion orchestration framework for the Chameleon Starship Protocol"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ultra + Cerri" }
]
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
